# restAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
crypto/: CMakeLists.txt  crypto.cpp  crypto.h
db/: CMakeLists.txt  db_connection.cpp  db_connection.h  request.cpp  request.h
network_handler/: CMakeLists.txt  path_trie.cpp  path_trie.h  router.cpp  router.h  server.cpp  server.h
src/: CMakeLists.txt  add_requests.cpp  add_requests.h  login_register.cpp  login_register.h  messages.cpp  messages.h  settings.cpp  settings.h
tests/: CMakeLists.txt  test_crypto.cpp  test_db.cpp  test_request.cpp  test_trie.cpp
